--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
-    <link rel="stylesheet" id="css" type="text/css" href="http://tonivf.no-ip.org/json/index.css" />
+    <link rel="stylesheet" id="css" type="text/css" href="http://ciberfamilias.es/json/index.css" />
     <title>CiberFamilias</title>
 </head>
 
